force-app/main/default/objects/SFDC_Project__c/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <description>Date project is intended to begin</description>
    <inlineHelpText>Should be used to estimate the planned start date.  Will help order the priorities.</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>