force-app/main/default/objects/SFDC_Project__c/fields/PO_Routing__c.field-meta.xml
<CustomField>
    <fullName>PO_Routing__c</fullName>
    <label>PO Routing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>cXML</fullName>
            </value>
            <value>
                <fullName>iConnect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>