force-app/main/default/objects/SFDC_Project__c/fields/Portal_Bill_Details__c.field-meta.xml
<CustomField>
    <fullName>Portal_Bill_Details__c</fullName>
    <label>Portal Bill Details</label>
    <type>TextArea</type>
</CustomField>