force-app/main/default/objects/SFDC_Project__c/fields/Portal_Bill_Request__c.field-meta.xml
<CustomField>
    <fullName>Portal_Bill_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Bill Request</label>
    <type>Checkbox</type>
</CustomField>