force-app/main/default/objects/SFDC_Project__c/fields/Primary_Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary point of contact on the business side.</description>
    <inlineHelpText>Business Point of Contact</inlineHelpText>
    <label>Primary Business Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>