force-app/main/default/objects/SFDC_Project__c/fields/Primary_Rep_or_NAM__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_or_NAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Rep or NAM</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>