force-app/main/default/objects/SFDC_Project__c/fields/Program_Managed__c.field-meta.xml
<CustomField>
    <fullName>Program_Managed__c</fullName>
    <label>Program Managed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>