force-app/main/default/objects/SFDC_Project__c/fields/Project_Scale__c.field-meta.xml
<CustomField>
    <fullName>Project_Scale__c</fullName>
    <inlineHelpText>Major Project - Requires integration, custom code, potential repercussions 
Minor Project - Basic Functionality, Doesn&apos;t affect existing config 
Tweak Existing - Make minor field, report, workflow changes 
New User Group - Requirements, config, setup</inlineHelpText>
    <label>Project Scale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major Project</fullName>
            </value>
            <value>
                <fullName>Minor Project</fullName>
            </value>
            <value>
                <fullName>Modify Existing</fullName>
            </value>
            <value>
                <fullName>Report/Dashboard</fullName>
            </value>
            <value>
                <fullName>Process Development/Support</fullName>
            </value>
            <value>
                <fullName>New User Group - Low Effort</fullName>
            </value>
            <value>
                <fullName>New User Group - High Effort</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>ReOrg</fullName>
            </value>
            <value>
                <fullName>Ongoing Enhancements</fullName>
            </value>
            <value>
                <fullName>Merge Processes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>