force-app/main/default/objects/SFDC_Project__c/fields/Project_Team__c.field-meta.xml
<CustomField>
    <fullName>Project_Team__c</fullName>
    <label>Project Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRM Administrators</fullName>
            </value>
            <value>
                <fullName>Exec Sponsors</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Grainger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>