force-app/main/default/objects/SFDC_Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT - CRM Management</fullName>
            </value>
            <value>
                <fullName>IT - Other</fullName>
            </value>
            <value>
                <fullName>Marketing - Other</fullName>
            </value>
            <value>
                <fullName>Marketing - Product Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>