force-app/main/default/objects/SFDC_Project__c/fields/Quick_Checkout_Fast_Lane__c.field-meta.xml
<CustomField>
    <fullName>Quick_Checkout_Fast_Lane__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick Checkout/Fast Lane</label>
    <type>Checkbox</type>
</CustomField>