force-app/main/default/objects/SFDC_Project__c/fields/Recommended_Solution__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Solution__c</fullName>
    <label>Recommended Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>