force-app/main/default/objects/SFDC_Project__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who requested the project, if different than the owner.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>