force-app/main/default/objects/SFDC_Project__c/fields/Risk_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation__c</fullName>
    <inlineHelpText>avoiding fees, fines or legal issues</inlineHelpText>
    <label>Risk Mitigation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>