force-app/main/default/objects/SFDC_Project__c/fields/Risk_Mitigation_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation_Description__c</fullName>
    <inlineHelpText>Enter further details of what risks are being mitigated here.</inlineHelpText>
    <label>Risk Mitigation Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>