force-app/main/default/objects/SFDC_Project__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <formula>rough_estimate_of_return__c  -  rough_estimate_of_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>