force-app/main/default/objects/SFDC_Project__c/fields/ROI_Type__c.field-meta.xml
<CustomField>
    <fullName>ROI_Type__c</fullName>
    <label>ROI Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Efficiencies/Reductions in Cost</fullName>
            </value>
            <value>
                <fullName>Increase in Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>