force-app/main/default/objects/SFDC_Project__c/fields/rough_estimate_of_cost__c.field-meta.xml
<CustomField>
    <fullName>rough_estimate_of_cost__c</fullName>
    <label>$ - rough estimate of cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>