force-app/main/default/objects/SFDC_Project__c/fields/rough_estimate_of_return__c.field-meta.xml
<CustomField>
    <fullName>rough_estimate_of_return__c</fullName>
    <label>$ - rough estimate of return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>