force-app/main/default/objects/SFDC_Project__c/fields/Scope_of_Project_IT__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Project_IT__c</fullName>
    <label>Scope of Project IT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>