force-app/main/default/objects/SFDC_Project__c/fields/Segment_specific_or_Veritiv__c.field-meta.xml
<CustomField>
    <fullName>Segment_specific_or_Veritiv__c</fullName>
    <label>Segment specific or Veritiv</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Veritiv</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Facilities Solutions</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Logistics Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>