force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Days_Remaining__c</fullName>
    <formula>SFDC_Project_End_Date__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>