force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Description__c</fullName>
    <label>Project Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>