force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Duration__c</fullName>
    <formula>SFDC_Project_End_Date__c  -  SFDC_Project_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>