force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_End_Date__c</fullName>
    <label>Project Completion Date</label>
    <type>Date</type>
</CustomField>