force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N700000024dAiEAI</relationshipName>
    <type>Lookup</type>
</CustomField>