force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Name__c</fullName>
    <description>Descriptive Project Name</description>
    <label>Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>