force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Stage__c</fullName>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start-up</fullName>
                <default>true</default>
                <label>Start-up</label>
            </value>
            <value>
                <fullName>Evaluating</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Executing</fullName>
            </value>
            <value>
                <fullName>Final Evaluation</fullName>
            </value>
            <value>
                <fullName>Preliminary Review</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Closing Down</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>