force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Start_Date__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>