force-app/main/default/objects/SFDC_Project__c/fields/SFDC_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Gathering Requirements</fullName>
            </value>
            <value>
                <fullName>Review Pending</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>On Hold/Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>