force-app/main/default/objects/SFDC_Project__c/fields/Specs__c.field-meta.xml
<CustomField>
    <fullName>Specs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specs</label>
    <type>Checkbox</type>
</CustomField>