force-app/main/default/objects/SFDC_Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Inquiry Only</fullName>
            </value>
            <value>
                <fullName>eBusiness Assessment</fullName>
            </value>
            <value>
                <fullName>Data Collection</fullName>
            </value>
            <value>
                <fullName>Order to Cash</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Pending Prioritization</fullName>
            </value>
            <value>
                <fullName>Pending BA Assignment</fullName>
            </value>
            <value>
                <fullName>BA Discovery</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>In Testing</fullName>
            </value>
            <value>
                <fullName>Post Go Live Support</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>JIRA</fullName>
                <isActive>false</isActive>
                <label>JIRA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>