force-app/main/default/objects/SFDC_Project__c/fields/Steering_Committee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Steering_Committee_Notes__c</fullName>
    <label>Steering Committee Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>