force-app/main/default/objects/SFDC_Project__c/fields/Steering_Committee_Project__c.field-meta.xml
<CustomField>
    <fullName>Steering_Committee_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Steering Committee Project</label>
    <type>Checkbox</type>
</CustomField>