force-app/main/default/objects/SFDC_Project__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <description>High level time estimates for assessment of project, outside vendor review, requirements gathering, development &amp; testing and rollout (communication &amp; training plan)</description>
    <inlineHelpText>High level time estimates for assessment of project, outside vendor review, requirements gathering, development &amp; testing and rollout (communication &amp; training plan)</inlineHelpText>
    <label>Timeline</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>