force-app/main/default/objects/SFDC_Project__c/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <description>11 27 23 changed label from Total Sales to Annual Sales as per Backlog Item-3747</description>
    <label>Annualized Sales</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>