force-app/main/default/objects/SFDC_Project__c/fields/Unify_ID__c.field-meta.xml
<CustomField>
    <fullName>Unify_ID__c</fullName>
    <label>Unify ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>