force-app/main/default/objects/SFDC_Project__c/fields/Unisource_Contact__c.field-meta.xml
<CustomField>
    <fullName>Unisource_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unisource Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>