force-app/main/default/objects/SFDC_Project__c/fields/Users_Affected__c.field-meta.xml
<CustomField>
    <fullName>Users_Affected__c</fullName>
    <label>Users Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Users</fullName>
            </value>
            <value>
                <fullName>Category Management</fullName>
            </value>
            <value>
                <fullName>Corporate Accounts</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>eBusiness</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>New User Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PDN</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Specialists</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Tax Supported Business</fullName>
            </value>
            <value>
                <fullName>VLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>