force-app/main/default/objects/SFDC_Project__c/fields/Users_Affected_Other__c.field-meta.xml
<CustomField>
    <fullName>Users_Affected_Other__c</fullName>
    <label>Users Affected - Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>