force-app/main/default/objects/SFDC_Project__c/fields/VOS_System__c.field-meta.xml
<CustomField>
    <fullName>VOS_System__c</fullName>
    <label>VOS System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>NU</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>