force-app/main/default/objects/SFDC_Project__c/fields/Weekly_Updates__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Updates__c</fullName>
    <label>Weekly Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>