force-app/main/default/objects/SFDC_Project__c/fields/Whse_Direct__c.field-meta.xml
<CustomField>
    <fullName>Whse_Direct__c</fullName>
    <label>Whse/Direct %</label>
    <length>10</length>
    <type>Text</type>
</CustomField>