force-app/main/default/objects/SFDC_Project__c/recordTypes/EBusiness_Project.recordType-meta.xml
<RecordType>
    <fullName>EBusiness_Project</fullName>
    <active>true</active>
    <description>Tracking all EBusiness Projects</description>
    <label>EBusiness Project</label>
</RecordType>