force-app/main/default/objects/SFDC_Project__c/recordTypes/Grainger.recordType-meta.xml
<RecordType>
    <fullName>Grainger</fullName>
    <active>false</active>
    <description>Grainger customer portal</description>
    <label>Grainger</label>
</RecordType>