force-app/main/default/objects/SFDC_Project__c/recordTypes/Marketing.recordType-meta.xml
<RecordType>
    <fullName>Marketing</fullName>
    <active>false</active>
    <label>Marketing</label>
</RecordType>