force-app/main/default/objects/SFDC_Project__c/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <description>Generic Project Requests</description>
    <label>Project</label>
</RecordType>