force-app/main/default/objects/SFDC_Project__c/validationRules/Notes_required_for_Data_Collection.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_required_for_Data_Collection</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 ISPICKVAL( Status__c , &quot;Data Collection&quot;),
 ISNULL( Status_Notes__c ) 
)</errorConditionFormula>
    <errorMessage>You must fill in Status Notes when Status = Data Collection</errorMessage>
</ValidationRule>