force-app/main/default/objects/SFDC_Project__c/validationRules/Submit_for_Approval_requires_field_updat.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_for_Approval_requires_field_updat</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 ISPICKVAL( Status__c , &quot;Submitted for Approval&quot;),
(OR ( ISNULL(  eBusiness_Solution__c  ),
ISNULL( PO_Routing__c ), 
ISNULL ( Scope_of_Project_IT__c ),
ISNULL( VOS_System__c )))
)</errorConditionFormula>
    <errorMessage>To change Status to Submitted for Approval, all of the following fields must be updated.
- eBusiness Solution  
- PO Routing
- Scope of Project
- VOS System</errorMessage>
</ValidationRule>