force-app/main/default/objects/SFDC_Project__c/listViews/All_Open_EBusiness_Projects.listView-meta.xml
<ListView>
    <fullName>All_Open_EBusiness_Projects</fullName>
    <columns>NAME</columns>
    <columns>SFDC_Project_Name__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>eBusiness_Solution__c</columns>
    <columns>Primary_Business_Contact__c</columns>
    <columns>Planned_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SFDC_Project__c.EBusiness_Project</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Canceled</value>
    </filters>
    <label>All Open EBusiness Projects</label>
</ListView>