force-app/main/default/objects/SFDC_Project__c/listViews/All_Open_Projects.listView-meta.xml
<ListView>
    <fullName>All_Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SFDC_Project_Status__c</columns>
    <columns>SFDC_Project_Name__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Users_Affected__c</columns>
    <columns>Planned_Start_Date__c</columns>
    <columns>SFDC_Project_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFDC_Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Completed,On Hold/Deferred</value>
    </filters>
    <label>All Open Projects</label>
    <language>en_US</language>
</ListView>