force-app/main/default/objects/SFDC_Project__c/listViews/All_Open_SFDC_Projects.listView-meta.xml
<ListView>
    <fullName>All_Open_SFDC_Projects</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Priority_Number__c</columns>
    <columns>SFDC_Project_Status__c</columns>
    <columns>SFDC_Project_Name__c</columns>
    <columns>Primary_Business_Function_Impact__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Expected_Go_live_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFDC_Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Completed,On Hold/Deferred</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SFDC_Project__c.Project</value>
    </filters>
    <label>All Open SFDC Projects</label>
</ListView>