force-app/main/default/objects/SFDC_Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>SFDC_Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>SFDC_Project_Status__c</columns>
    <columns>Planned_Start_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>